# vibe-kanban

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LOCAL_README.md  README.md  docker-compose.langfuse.yml  package.json  pnpm-lock.yaml
.cargo/: config.toml
crates/db/: Cargo.toml  prepare_db.sqlite  prepare_db.sqlite-journal
crates/db/.sqlx/: query-00b9bd1087b1e8cb4ea04b19592fc7c30a840ba12d97ed09a593629d1c9106db.json  query-012442cf6aa124c047a27efd97ca8c0e7390cac9670284b84b18295353ec9ba1.json  query-01ae8ca9f2607eba8e46ae45514468a1268f4737ae5db3d6afbb2fa552022d9b.json  query-04884270b9a390ea3656fb1aaaeba6bda7acff604880f35ae4e975225e129dfa.json  query-049b70277b23c929614537aedd38cef8626ed07ab5f766c37102457d532e42eb.json  query-08451df4c691c27ec371b877eb9e5d2ae6bdd951143c42b7a64bc8d556c32f59.json  query-097439a859b2db219ec941e462a40572779a351d261bb3fd062111effde53d50.json  query-09adee4661cd23cd7c824585e354f5127b6bd2240eb3ad6426e1f1b1385cb3b0.json  query-09b7d1c92d9794114ceba12ac6397514720faf49388f2156d22b804c3d07a07b.json  query-0a3c18345bf66a6ec48bd8156eb8ca7b60e8b01420cfcc5032ac5636d7c9b12b.json  query-0ab1a5a5926a3d92feae0ed404aea16ca4e2e5e98d4d93784e158b58e9c4946e.json  query-0af8249798444de6cf4dd306a366d895470cd42b115ad14ec0ec7f806c53f0cb.json  query-0be5fe357859c3e4380ed1a295f902dff837bfe016abe247ffe5de4324b47071.json  query-0d805a0fd1542c297ee89d07c1367114dce73453934497bc1e99294e9d36b31e.json  query-0ecf2efcc4d1587e0e8ab4f3ea65f637d86db790193c81c087dff8a6e29cc5d3.json  query-0ee461fad3eb9ed9acf1b8e4736da75104947e6f2cebec4cb60d36b7540dd288.json  query-10216b3fcee200dbf1febc434627949cffd43369c6e4a148ea6726b69cabd81a.json  query-1037de8d138328d8aa2a2352ab6be7622908f36b12c91221fbbeacbd1104c0fe.json  query-11ffe39fa54f14e936b652559d0af3d54cd1c3336dcb3cf6e675ef16e56e337a.json  query-135a31d36981049ff884a311d86bd7af56dbe9d4e9e8352d7cd97c6c1ae249b4.json  query-14f9602e3f3b857cece6520c55039b7dc0db29ba78b93cbd71a27755f7043b70.json  query-1538e4a5e05f193f7c69c5fd6b71a0febd70f810e3163b49b97eb811dae3a092.json  query-156f8f551cd2738d6bfaa202f077464f1de40133c53dc359c832f4ea91f0f76a.json  query-1570ee90c4864b20a3c7160c34fd9e9baf12f992445c0772ffb43c960051fed7.json  query-1582e408ea08d84b79132ce0479a3ab5a89e60b7c3eee7d20c1995040bd71244.json  query-174eb97750e312584eb66be3bc7278af9ee9f96d27c4d0b2992ba30e95f5f2b9.json  query-17cc98ffc6bcb1959e7081d4c8831c253d18a2fb418b6a506567ac6b4de52850.json  query-1ac6442557be161eab374e13cc9c78a38a8002b723cdf73e4c4dd7d485f4b90c.json  query-1e72730f6592238ad104641b072e049a07ae0ead2117c7c97d1b89936049d040.json  query-1e941c53a463392a394fefca8aadeb1a2ce0a24abda39b18285399e7bbf0377b.json  query-1ebfaf3327d2fdf6b28ef74add08b295445553e665d1a67495be7b7284127574.json  query-1f15db84c7fabedcbe987635297fb6bde8c384df8d598bd8f71ba460b10dbc0e.json  (+195 more)
crates/tauri-app/: Cargo.toml  build.rs  tauri.conf.json
(+500 files in other folders)
