[package]
name = "tauri-app"
version = "0.1.0"
edition = "2021"
description = "Vibe Kanban desktop application"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-dialog = "2.0"

server = { path = "../server" }
local-deployment = { path = "../local-deployment" }
deployment = { path = "../deployment" }
utils = { path = "../utils" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tauri-app"
path = "src/main.rs"
