[package]
name = "tauri-app"
version = "0.1.0"
edition = "2021"
description = "Vibe Kanban desktop application"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-mcp-bridge = "0.8"

server = { path = "../server" }
local-deployment = { path = "../local-deployment" }
deployment = { path = "../deployment" }
utils = { path = "../utils" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
directories = "6.0.0"
rustls = { version = "0.23", features = ["ring"] }

[lib]
name = "tauri_app_lib"
# Only rlib needed for desktop app (staticlib/cdylib are for iOS/Android)
crate-type = ["rlib"]

[[bin]]
name = "vibe-kanban"
path = "src/main.rs"
